src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section1__test__evaluate_g1a.snap
---
source: src/strucvars/eval/dup/section1.rs
expression: res
---
G1:
  G1A:
    genes:
      - gene:
          hgnc_id: "HGNC:9965"
          hgnc_symbol: RERE
          ensembl_gene_id: ENSG00000142599
          ncbi_gene_id: "473"
        tx_ids:
          - NM_001042681.2
          - NM_001042682.2
          - NM_012102.4

