src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section1__test__evaluate_g1a@no-gene.snap
---
source: src/strucvars/eval/dup/section1.rs
expression: res
---
g1:
  g1a:
    genes: []
    functional_elements:
      - refseq:
          chromosome: "11"
          start: 125423938
          stop: 125424204
          id: "id-GeneID:116225306"
          dbxref: "GeneID:116225306"
          category: CATEGORY_REGION
          function: "regulatory_interactions: FEZ1"
      - refseq:
          chromosome: "11"
          start: 125423938
          stop: 125424204
          id: "id-GeneID:116225306-2"
          dbxref: "GeneID:116225306"
          category: CATEGORY_REGULATORY
          regulatoryClass: REGULATORY_CLASS_TRANSCRIPTIONAL_CIS_REGULATORY_REGION
          experiment: "EXISTENCE:mutant phenotype evidence [ECO:0000015][PMID:30612741]"
          function: positively regulates FEZ1 gene expression with high confidence in K562 cells

